--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
             <version>18.0.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+            <version>18.0.2</version>
+        </dependency>
     </dependencies>
 
 
